crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__chosen_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool true of
  True -> trace "chosen" in error
  False -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (con bool True)
    (con integer 42)
    (force [[(force (builtin trace)) (con string "chosen")] (delay (error))])))
--- optimized Core
trace "chosen" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1 (force [[builtin_1 (con string "chosen")] (delay (error))]))
    (force (builtin trace))])
--- isolated pass
--- core before
case@Bool true of
  True -> trace "chosen" in error
  False -> 42
--- uplc before
(program 1.1.0
  (case
    (con bool True)
    (con integer 42)
    (force [[(force (builtin trace)) (con string "chosen")] (delay (error))])))
--- core after
trace "chosen" in error
--- uplc after
(program 1.1.0
  (force [[(force (builtin trace)) (con string "chosen")] (delay (error))]))
--- result
error: ExplicitErrorTerm
--- logs
["chosen"]
