crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__duplicate.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(root), pretty(after))"
---
--- before
case@Bool true of
  True -> 42
  True -> 0
--- after
case@Bool true of
  True -> 42
  True -> 0
--- errors
InvalidCase("duplicate boolean branch")
InvalidCase("duplicate boolean branch")
