crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__fields.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(root), pretty(after))"
---
--- before
case@Bool true of
  True field#1 -> 42
--- after
case@Bool true of
  True field#1 -> 42
--- errors
InvalidCase("boolean branches bind no fields")
InvalidCase("boolean branches bind no fields")
