crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__missing.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), left.uplc, right.uplc, right.result,\nright.logs)"
---
--- core before
case@Bool true of
  False -> 0
--- core after
case@Bool true of
  False -> 0
--- uplc before
(program 1.1.0 (case (con bool True) (con integer 0) (error)))
--- uplc after
(program 1.1.0 (case (con bool True) (con integer 0) (error)))
--- result
error: ExplicitErrorTerm
--- logs
[]
