crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__reversed.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool true of
  False -> 0
  True -> 42
  _ -> error
--- unoptimized UPLC
(program 1.1.0 (case (con bool True) (con integer 0) (con integer 42)))
--- optimized Core
case@Bool true of
  False -> 0
  True -> 42
  _ -> error
--- optimized UPLC
(program 1.1.0 (case (con bool True) (con integer 0) (con integer 42)))
--- isolated pass
--- core before
case@Bool true of
  False -> 0
  True -> 42
  _ -> error
--- uplc before
(program 1.1.0 (case (con bool True) (con integer 0) (con integer 42)))
--- core after
42
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
