crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_bool__strict_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_bool.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let ignored#1 : int = error in
case@Bool true of
  True -> 42
  False -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam ignored_1 (case (con bool True) (error) (con integer 42))) (error)])
--- optimized Core
let ignored#2 : int = error in
case@Bool true of
  True -> 42
  False -> error
--- optimized UPLC
(program 1.1.0
  [(lam ignored_1 (case (con bool True) (error) (con integer 42))) (error)])
--- isolated pass
--- core before
let ignored#1 : int = error in
case@Bool true of
  True -> 42
  False -> error
--- uplc before
(program 1.1.0
  [(lam ignored_1 (case (con bool True) (error) (con integer 42))) (error)])
--- core after
let ignored#1 : int = error in
42
--- uplc after
(program 1.1.0 [(lam ignored_1 (con integer 42)) (error)])
--- result
error: ExplicitErrorTerm
--- logs
[]
